--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,3 +18,105 @@ body {
   font-family: var(--font-mono);
   background-color: #0a192f; 
 }
+
+.about-section {
+  position: relative;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.parallax-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background-image: url('../../public/avt.png'); */
+  background-size: cover;
+  background-attachment: fixed;
+  z-index: -1;
+}
+
+.content-container {
+  
+    width: 80%;
+    /* max-width: 800px; */
+    /* background-color: #282c34; */
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
+  
+}
+
+.user-avatar {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin-right: 20px;
+}
+
+.text-container {
+  color: #fff;
+}
+
+h2 {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+p {
+  font-size: 18px;
+}
+
+
+.custom-border {
+  border: 4px solid #fff; /* White border */
+  box-shadow: 0 0 10px rgba(0, 247, 255, 0); /* Neon blue shadow (initially transparent) */
+  transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+/* Neon border and shadow on hover */
+.custom-border:hover {
+  border-color: #00f7ff; /* Neon blue color */
+  box-shadow: 0 0 10px rgba(0, 247, 255, 1); /* Neon blue shadow (fully opaque) */
+  transform: translateX(10px) translateY(-10px); /* Move the div right and up on hover */
+  background-image: linear-gradient(to bottom, #00f7ff, #ff00ff); /* Gradient background */
+  background-size: 100% 200%; /* Initial background size */
+  animation: parallaxEffect 3s infinite alternate; /* Apply parallax animation */
+}
+
+@keyframes parallaxEffect {
+  0% {
+    background-position: 0 0; /* Start background position */
+  }
+  100% {
+    background-position: 0 100%; /* End background position (parallax effect) */
+  }
+}
+
+/* Triangle shape */
+.triangle {
+  width: 0;
+  height: 0;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-bottom: 100px solid #ff00ff; /* Set the color of the triangle */
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+/* Circle shape */
+.circle {
+  width: 100px;
+  height: 100px;
+  background-color: #ff00ff; /* Set the color of the circle */
+  border-radius: 50%;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
