--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,3 +120,25 @@ p {
   right: 20px;
 }
 
+/* styles.css */
+.layout {
+  position: relative;
+}
+
+/* Styles for the cursor-following background */
+/* .cursor-following-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(135deg, #393939, #1a1a1a);
+  pointer-events: none;
+  z-index: -1;
+} */
+
+/* Styles for the content */
+/* .content {
+  position: relative;
+  z-index: 1;
+} */
