--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -143,3 +143,7 @@ p {
   position: relative;
   z-index: 1;
 } */
+.bg-hero-pattern {
+  background-image: url('/src/assets/herobg.png') !important;
+  background-size: cover;
+}
